# api-deployment-example

./: Cargo.toml  docker-compose.yml
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-7f8180b71331d2b03816f5354f02c11e0bd21683db0d04c78b6e552e190871d3.json  query-c29c3335982e1d94b228741bd39cef977855237d8ec06d7f6cd80eac8306cad8.json  query-c784939c918ab366668c34ba5a1314c7e44eb8ba49d3280435155dc7cf03e8f0.json  query-e1b64aa4c4ef751c063e24f7fb55eb8186d21608b9481715a63b48246790f0bc.json
migrations/: 20230725192648_links.up.sql
src/: main.rs
src/controllers/: link.rs  user.rs
src/models/: link.rs  user.rs
