[package]
name = "api-deployment-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["json", "headers"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["full"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
